# fries

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
fries/: CMakeLists.txt
fries/futures/: Future.hpp  future.hpp
fries/futures/tests/: future_test.cpp
fries/system/: options.hpp  switcher.hpp
tests/: .clang-tidy  CMakeLists.txt  main.cpp
tests/FriesTest/: CMakeLists.txt  main.cpp
tests/futures/: future_test.cpp
tests/system/: options_test.cpp  switcher_test.cpp
